# PlayDiffusion

./: .gitattributes  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
demo/: gradio-demo.py
inpainter/: inpainter_loader.py  llama_nar.py  masklm_text.py
src/play_inpainter/: __init__.py  inference.py
src/play_inpainter/models/: model_manager.py
src/play_inpainter/models/ar/: conditioning_encoder.py  conditioning_encoder_sampler.py  parrot_base_model.py  parrot_base_sampler.py
src/play_inpainter/models/inpainter/: llama_nar.py  masklm_text.py  position_embeddings.py
src/play_inpainter/models/mel_spectrogram/: mel.py  tacotron.py
src/play_inpainter/models/speech_tokenizer/: kmeans.py  speech_tokenizer.py  xlsr_encoder.py
src/play_inpainter/models/tokenizer/: pp_tokenizer.py  voice_tokenizer.py
src/play_inpainter/models/vocoder/: ldm_bigvgan.py
src/play_inpainter/models/voice_encoder/: voice_encoder.py
src/play_inpainter/pydantic_models/: models.py
src/play_inpainter/utils/: audio_utils.py  dot_dict.py  get_resource.py  load_model_params_st.py  loading.py  preset_util.py  save_audio.py  voice_emb.py  voice_resource.py
src/playdiffusion/: __init__.py  inference.py
src/playdiffusion/models/: model_manager.py
src/playdiffusion/models/ar/: conditioning_encoder.py  conditioning_encoder_sampler.py
src/playdiffusion/models/inpainter/: llama_nar.py  llm.py  masklm_text.py
src/playdiffusion/models/mel_spectrogram/: mel.py
src/playdiffusion/models/speech_tokenizer/: speech_tokenizer.py
src/playdiffusion/models/tokenizer/: pp_tokenizer.py
src/playdiffusion/models/vocoder/: ldm_bigvgan.py
src/playdiffusion/pydantic_models/: models.py
src/playdiffusion/utils/: audio_utils.py  get_resource.py  gpu_memory_manager.py  loading.py  model_util.py  voice_emb.py  voice_resource.py
vocoder/: ldm_bigvgan.py
